responsividad 4xl, falta script anti-zoom

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,32 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0,target-densitydpi=device-dpi" />
+    <meta property="og:title" content="PacLife">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.paclife.cl/hub/">
+
+    <meta name="author" content="Brvma" />
+    <meta name="copyright" content="copyright (c) by BRVMA">
+    <meta 
+      name="description"
+      content=""
+    />
+    <meta
+      name="keywords" 
+      content="packaging,bolsa,ziploc,zeolita,vegetal,preservacion,fruta,verdura"
+    />
+
+    <meta name="Classification" content="Envases Inteligentes">
+    <meta name="robots" value="ALL">
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+
+    <title>PacLife</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Lo sentimos, pero PacLife necesita que habilites javascript para funcionar.</strong>
     </noscript>
     <div id="hub"></div>
     <!-- built files will be auto injected -->
